@@ -65,6 +65,7 @@
 				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block12" value="12" checked="checked" /><label for="tx_egovapi_block12">###LABEL_BLOCK_12###</label></li>
 				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block13" value="13" checked="checked" /><label for="tx_egovapi_block13">###LABEL_BLOCK_13###</label></li>
 			</ul>
+			<div class="toggleBlocks"><a href="#">###LABEL_TOGGLE_MARKS###</a></div>
 		</fieldset>
 	</div>
 	<div id="tx_egovapi_selectorForm_language">
