@@ -1,5 +1,6 @@
 2011-06-06  Xavier Perseguers  <xavier@causal.ch>
 
+	* [FEATURE] #27263: Add "Select all/none" for blocks
 	* [TASK] Thrown error when inconsistency between organization and community files is detected
 	* [BUGFIX] #27237: Constant Editor crashes when egovapi DAO is NULL
 
